# formal-systems-learning-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
trs/: background  evaluate  evaluate_1_0  evaluate_1_1  evaluate_1_2  evaluate_1_3  evaluate_2_0  evaluate_2_1  evaluate_2_2  evaluate_2_3  evaluate_2_4  evaluate_2_5  evaluate_3_0  evaluate_3_1  evaluate_3_2  evaluate_3_3  evaluate_4_0  signature  simulation.toml  stimuli.json  templates
